[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "lmk"
description = "A Custom Jupyter Widget Library"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Cam Feenstra", email = "me@camfeenstra.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["pydantic", "blinker", "python-dateutil"]
version = "0.1.0.dev0"

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=7.0.0",
    "jupyterlab"
]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/cfeenstra67/lmk"

[tool.hatch.build]
artifacts = [
    "lmk/jupyter/nbextension/index.*",
    "lmk/jupyter/labextension/*.tgz",
    "lmk/jupyter/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"lmk/jupyter/nbextension" = "share/jupyter/nbextensions/lmk"
"lmk/jupyter/labextension/lmk.js" = "share/jupyter/labextensions/lmk.js"
"./install.json" = "share/jupyter/labextensions/lmk/install.json"
"./lmk.json" = "etc/jupyter/nbconfig/notebook.d/lmk.json"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "lmk/jupyter/nbextension/lmk.js",
    "lmk/jupyter/labextension/package.json",
]
skip-if-exists = [
    "lmk/jupyter/nbextension/lmk.js",
    "lmk/jupyter/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = "pnpm"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "lmk/__init__.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
